--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <script src="p5.js"></script>
   <script src="p5.dom.min.js"></script>
   <script src="p5.sound.min.js"></script>
-  <script src="index.js"></script>
+  <script src="../index.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
