--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script src="p5.js"></script>
   <script src="p5.dom.min.js"></script>
   <script src="p5.sound.min.js"></script>
+  <script src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -50,7 +51,6 @@ constant">
   </div>
 
 -->
-<script src="../index.js"></script>
 </body>
 
 </html>
